src/components/welcome/WelcomeSection.module.scss
@import "../../styles/colors.scss";
@import "../../../public/fonts/fonts.scss";
@import "../../styles/variables.scss";

.welcomeSection {
  display: flex;
  justify-content: center;
  // background: $color-background;
  background-image: url("/block-images/welcome.webp");
  background-repeat: no-repeat;
  background-position: right 160px top 26px;
  width: 100%;
  height: 540px;
  max-width: 90rem;
  margin: 0 auto 140px auto;

  & :global(.container) {
    width: 100%;
  }
  @media (max-width: 1240px) {
    background-size: 50% auto;
    background-position: right 20px center;
  }

  @media (max-width: 768px) {
    padding-top: 20.9rem;
    height: auto;
    justify-content: flex-end;
    background-size: auto 65%;
    background-position: top 2px center;
    margin: 0 auto 84px auto;
  }

  @media (max-width: 576px) {
    background-image: url("/block-images/welcome-mobile.webp");
    background-size: auto 63%;
  }

  @media (max-width: 420px) {
    margin: 0 auto 72px auto;
    background-size: auto 40%;
    padding-top: 14.35rem;
  }
}

.welcomeContent {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  position: relative;
  z-index: 1;
  max-width: 72.5rem;

  @media (max-width: 768px) {
    button {
      align-self: center;
      max-height: 77px;
    }
  }
}

.welcomeText {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 48px;
  width: 500px;
  max-width: 50%;
  // margin-left: -20px;

  .bonusText {
    display: none;
  }

  @media (max-width: 1280px) {
    margin-left: 0;
  }

  @media (max-width: 768px) {
    width: 100%;
    max-width: 100%;
    gap: 24px;
    align-items: center;
    text-align: center;

    .bonusText {
      display: block;
    }

    .offerText {
      display: none;
    }
  }

  @media (max-width: 380px) {
    gap: 20px;
  }
}

.welcomeText h2 {
  font-family: $font-secondary;
  font-size: 64px;
  font-style: normal;
  font-weight: $font-weight-black;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  line-height: normal;
  text-transform: uppercase;
  color: $text-color-welcome;

  // background: $text-color-welcome;
  // background-clip: text;
  // -webkit-background-clip: text;
  // -webkit-text-fill-color: transparent;

  @media (max-width: 768px) {
    display: none;
  }
}

.welcomeText p {
  font-family: $font-primary;
  color: $text-color-secondary;
  font-size: 32px;
  font-style: normal;
  font-weight: $font-weight-regular;
  line-height: normal;

  @media (max-width: 768px) {
    font-size: 24px;
    font-family: $font-secondary;
    font-weight: $font-weight-black;
    text-transform: uppercase;
    // color: $text-color-welcome;

    // background: $text-color-welcome;
    // background-clip: text;
    // -webkit-background-clip: text;
    // -webkit-text-fill-color: transparent;
  }

  @media (max-width: 380px) {
    font-size: 20px;
  }
}

